--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "broccoli-traceur": "~0.9.0",
     "karma": "~0.12.23",
     "karma-jasmine": "~0.1.5",
-    "karma-phantomjs-launcher": "~0.1.4"
+    "karma-phantomjs-launcher": "~0.1.4",
+    "sinon": "~1.10.3",
+    "karma-sinon": "~1.0.3"
   }
 }
