Add repo field in package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "test": "karma start"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dpiatek/jamscript"
+  },
   "author": "Dominik Piatek",
   "license": "MIT",
   "devDependencies": {
