More rules for jshint

--- a/.jshintrc
+++ b/.jshintrc
@@ -5,6 +5,9 @@
     "expect": false,
     "beforeEach": false,
     "afterEach": false,
-    "sinon": false
-  }
+    "sinon": false,
+    "require": false
+  },
+  "strict": false,
+  "node": true
 }
