--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "Dominik Piatek",
   "license": "MIT",
   "devDependencies": {
+    "browserify": "^4.0.0",
     "karma": "~0.12.23",
     "karma-jasmine": "~0.1.5",
     "karma-phantomjs-launcher": "~0.1.4",
     "sinon": "~1.10.3",
-    "karma-sinon": "~1.0.3"
+    "karma-sinon": "~1.0.3",
+    "karma-browserify": "~0.2.1"
   }
 }
