--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "karma-phantomjs-launcher": "~0.1.4",
     "sinon": "~1.10.3",
     "karma-sinon": "~1.0.3",
+    "karma-firefox-launcher": "~0.1.3",
     "karma-browserify": "~0.2.1"
   }
 }
